--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     "require-dev": {
         "phpunit/phpunit": "^5.5"
     },
+    "autoload": {
+        "psr-4": {"Sitewards\\": "src/Sitewards/"}
+    },
     "license": "MIT",
     "authors": [
         {
