--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": "^5.6",
-        "symfony/console": "^3.1"
+        "symfony/console": "^3.1",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5"
