--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "php": "^5.6",
         "symfony/console": "^3.1",
-        "doctrine/dbal": "^2.5"
+        "doctrine/dbal": "^2.5",
+        "symfony/filesystem": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.5"
