--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "symfony/filesystem": "^3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5"
+        "phpunit/phpunit": "^5.5",
+        "phpunit/php-code-coverage": "^4.0"
     },
     "autoload": {
         "psr-4": {"Sitewards\\": "src/Sitewards/"}
